<resources>
    <string name="app_name">ProjectGamePars</string>
    <string name="btn_init_register" translatable="false">Registrar</string>
    <string name="btn_init_exit">Salir</string>
    <string name="wallpaper" translatable="false">walpaper_appp</string>
    <string name="btn_init_login" translatable="false">Acceder</string>
    <string name="correoEt" translatable="false">E-mail</string>
    <string name="nombreEt">Nombre</string>
    <string name="passEt">Contraseña</string>
    <string name="Registrar" translatable="false">REGISTRAR</string>
    <string name="fechaTxt">Fecha</string>
    <string name="correoLogin" translatable="false">E-mail</string>
    <string name="passLogin">Contraseña</string>
    <string name="btnLogin">ENTRAR</string>
    <string name="btn_juego_reiniciar">Siguiente Nivel</string>
    <string name="strLaderboard">Tabla de Posiciones</string>
    <string name="btn_init_play">Jugar</string>
    <string name="btn_init_profile">Perfil</string>
    <string name="btnInicio">Reiniciar</string>
    <string name="btnLaderboardShow">Tablas</string>
    <string name="strCredits">Creditos</string>
    <string name="dam">CFGS Desarrollo de Aplicaciones Multiplataforma</string>
    <string name="fecha">28 Marzo 2023</string>
    <string name="btn_init_return">Volver</string>
    <string name="hello_blank_fragment" translatable="false">Oriol Gassó</string>
    <string name="hello_blank_fragment2" translatable="false">Eduardo Apaza</string>
    <string name="hello_blank_fragment3">Programadores</string>
</resources>