<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_on_primary"
    tools:context=".PrimerFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="850px"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:text="@string/hello_blank_fragment" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="650px"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/hello_blank_fragment2"
        android:textSize="35sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450px"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:text = "@string/hello_blank_fragment3" />

    <TextView
        android:text="@string/fecha"
        android:gravity="center"
        android:textSize="50px"
        android:layout_marginTop="1200px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</FrameLayout>