<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">
    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/si" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"

        android:padding="30dp">
        <!-- Form of the mail -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/correoEt"
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@color/gris"
                android:hint="@string/correoEt"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Name of the Player -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/nombreEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombreEt"
                android:background="@color/gris"
                android:textColorHint="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Form of the password -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/passEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/passEt"
                android:background="@color/gris"
                android:textColorHint="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Date Actual -->
        <TextView
            android:id="@+id/fechaEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/fechaTxt"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:background="@color/gris"/>
        <!-- Btn Of Enter -->
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Registrar"
            android:layout_marginTop="10dp"
            android:background="@color/gris"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>