<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gamewall"
    android:orientation="vertical">

    <!--fila 1 -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <ImageButton
                android:id="@+id/boton00"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_column="0">
            </ImageButton>
            <ImageButton
                android:id="@+id/boton01"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_column="1">
            </ImageButton>
            <ImageButton
                android:id="@+id/boton02"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_column="2">
            </ImageButton>
            <ImageButton
                android:id="@+id/boton03"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_column="3">
            </ImageButton>
        </TableRow>
    </TableLayout>
    <!--fila 2 -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="0dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <ImageButton
                android:id="@+id/boton04"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_column="0">
            </ImageButton>
            <ImageButton
                android:id="@+id/boton05"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_column="1">
            </ImageButton>
            <ImageButton
                android:id="@+id/boton06"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_column="2">
            </ImageButton>
            <ImageButton
                android:id="@+id/boton07"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_column="3">
            </ImageButton>
        </TableRow>
        <!--fila 3 -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="0dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/boton08"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_column="0">
                </ImageButton>
                <ImageButton
                    android:id="@+id/boton09"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_column="1">
                </ImageButton>
                <ImageButton
                    android:id="@+id/boton10"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_column="2">
                </ImageButton>
                <ImageButton
                    android:id="@+id/boton11"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_column="3">
                </ImageButton>
            </TableRow>
        </TableLayout>
        <!--fila 3 -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="0dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/boton12"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_column="0">
                </ImageButton>
                <ImageButton
                    android:id="@+id/boton13"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_column="1">
                </ImageButton>
                <ImageButton
                    android:id="@+id/boton14"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_column="2">
                </ImageButton>
                <ImageButton
                    android:id="@+id/boton15"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_column="3">
                </ImageButton>
            </TableRow>
        </TableLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp">


            <Button
                android:id="@+id/btnInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnInicio"></Button>

            <Button
                android:id="@+id/btnJuegoSalir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_init_exit"></Button>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp">




            <Button
                android:id="@+id/btnLaderboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnLaderboardShow"></Button>
            <Button
                android:id="@+id/btnProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_init_profile"></Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/txt_puntuacion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:textColor="@color/yellow"
                >

            </TextView>


        </LinearLayout>


    </TableLayout>


</LinearLayout>